--- a/changelog.html
+++ b/changelog.html
@@ -43,6 +43,10 @@
 <h1>
 Load Statistic Plugin Changelog
 </h1>
+<p><b>1.2.0</b> -- Sep 13, 2013</p>
+<ul>
+     <li>Requires Openfire 3.9.0.</li>
+</ul>
 
 <p><b>1.1.0</b> -- April 12, 2007</p>
 <ul>
