add changelog entry

--- a/changelog.html
+++ b/changelog.html
@@ -43,6 +43,11 @@
 <h1>
 Load Statistic Plugin Changelog
 </h1>
+<p><b>1.2.1</b> -- TBD</p>
+<ul>
+	<li><a href="https://github.com/igniterealtime/openfire-loadStats-plugin/pull/5">#5</a> fixed stats returned by plugin</li>
+</ul>
+
 <p><b>1.2.0</b> -- Sep 13, 2013</p>
 <ul>
      <li>Requires Openfire 3.9.0.</li>
