--- a/changelog.html
+++ b/changelog.html
@@ -43,7 +43,7 @@
 <h1>
 Load Statistic Plugin Changelog
 </h1>
-<p><b>1.2.1</b> -- TBD</p>
+<p><b>1.2.1</b> -- Feb 19, 2021</p>
 <ul>
 	<li><a href="https://github.com/igniterealtime/openfire-loadStats-plugin/pull/5">#5</a> fixed stats returned by plugin</li>
 </ul>
