--- a/changelog.html
+++ b/changelog.html
@@ -43,6 +43,10 @@
 <h1>
 Load Statistic Plugin Changelog
 </h1>
+<p><b>1.2.2</b> -- TBD</p>
+<ul>
+</ul>
+
 <p><b>1.2.1</b> -- Feb 19, 2021</p>
 <ul>
 	<li><a href="https://github.com/igniterealtime/openfire-loadStats-plugin/pull/5">#5</a> fixed stats returned by plugin</li>
