--- a/changelog.html
+++ b/changelog.html
@@ -43,8 +43,10 @@
 <h1>
 Load Statistic Plugin Changelog
 </h1>
-<p><b>1.2.2</b> -- TBD</p>
+<p><b>1.3.0</b> -- TBD</p>
 <ul>
+    <li>Requires Openfire 4.8.0.</li>
+    <li><a href="https://github.com/igniterealtime/openfire-loadStats-plugin/pull/11">#11</a> fixed compatibility with Openfire 4.8, 4.9 and 5.0</li>
 </ul>
 
 <p><b>1.2.1</b> -- Feb 19, 2021</p>
