--- a/readme.html
+++ b/readme.html
@@ -63,8 +63,7 @@ Load Statistic Plugin Readme
 <h2>Overview</h2>
 
 <p>
-The statistic plugin prints usage information of the database connection pool, thread pool used for processing
-incoming traffic and the NIO networking layer.
+The statistic plugin prints usage information of the database connection pool and established client sessions.
 </p>
 
 <h2>Installation</h2>
@@ -83,7 +82,7 @@ a few system properties. Read the "Using the Plugin" section to learn which syst
 
 <p>
 The plugin will collect information every few seconds and will print the collected information to a log file
-every minute. The log file is a comma delimited file that can be easily processed in Excel. You can configure
+every minute. The log file is a comma-delimited file that can be easily processed in Excel. You can configure
 the plugin by setting the system properties shown in the table below.
 <p>
 
@@ -111,54 +110,26 @@ the plugin by setting the system properties shown in the table below.
                 Name of the file to use to store the statistics. The file will always be stored in the logs folder. Default value is "stats.txt".
             </td>
         </tr>
-        <tr>
-            <td>
-                <span class="event">statistic.connectionmanager</span>
-            </td>
-            <td>
-                True if statistics will be collected for Connection Managers traffic or false when statistics will be collected for clients directly connected to the server. Default value is "false".
-            </td>
-        </tr>
     </tbody>
 </table>
 
 <p>
 The format of the log file is the following:
-    <ol>
-        <li><b>Timestamp</b> - Timestamp when the data was collected</li>
-        <li><b>DB min</b> - Minimum number of connections the pool may have</li>
-        <li><b>DB max</b> - Maximum number of connectiosn the pool may have</li>
-        <li><b>DB current</b> - Current number of connections the pool has</li>
-        <li><b>DB used</b> - Current number of connections being used</li>
-        <li><b>Core Threads</b> - Number of threads for processing incoming traffic</li>
-        <li><b>Active Threads</b> - Number of threads that are actually processing incoming traffic</li>
-        <li><b>Queue Tasks</b> - Number of stanzas stored in the queue when all threads where busy</li>
-        <li><b>Completed Tasks</b> - Total number of stanzas that were processed</li>
-        <li><b>Sessions</b> - Current number of client sessions in the server</li>
-        <li><b>NIO Read</b> - Total number of stanzas that were read</li>
-        <li><b>NIO Written</b> - Total number of stanzas that were sent</li>
-        <li><b>Queued NIO events</b> - Current number of stanzas that are queued. Stanzas are queued when the same client sends many stanzas and the server is still processing a previous stanza. Queued stanzas are not yet considered read.</li>
-        <li><b>Queues NIO writes</b> - Current number of stanzas pending to be sent</li>
-    </ol>
 </p>
+<ol>
+    <li><b>Timestamp</b> - Timestamp when the data was collected</li>
+    <li><b>DB min</b> - Minimum number of connections the pool may have</li>
+    <li><b>DB max</b> - Maximum number of connectiosn the pool may have</li>
+    <li><b>DB current</b> - Current number of connections the pool has</li>
+    <li><b>DB used</b> - Current number of connections being used</li>
+    <li><b>Sessions</b> - Current number of client sessions in the server</li>
+</ol>
 
-When processing the file in Excel you may want to add the following columns:
+<p>
+    When processing the file in Excel you may want to add the following columns:
+</p>
 <ul>
-    <li><b>NIO Reads Delta</b> - Difference between a <i>NIO Read</i> row and its previous row</li>
-    <li><b>NIO Writtens Delta</b> - Difference between a <i>NIO Written</i> row and its previous row</li>
     <li><b>Sessions delta</b> - Difference between a <i>Sessions</i> row and its previous row</li>
-</ul>
-
-Excell charts are a great way for understanding the collected statistics. In particular, we found charts
-of the following columns useful.
-<ul>
-    <li><b>NIO Read</b> and <b>NIO Written</b></li>
-    <li><b>NIO Reads Delta</b> and <b>NIO Writtens Delta</b></li>
-    <li><b>Sessions</b></li>
-    <li><b>Sessions delta</b></li>
-    <li><b>Completed Tasks</b></li>
-    <li><b>DB used</b></li>
-    <li><b>Active Threads</b></li>
 </ul>
 
 </body>
