--- a/changelog.html
+++ b/changelog.html
@@ -43,6 +43,10 @@
 <h1>
 Load Statistic Plugin Changelog
 </h1>
+<p><b>1.3.1</b> -- Unreleased version</p>
+<ul>
+</ul>
+
 <p><b>1.3.0</b> -- June 23, 2025</p>
 <ul>
     <li>Requires Openfire 4.8.0.</li>
